トップページ作成

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,18 +13,31 @@
 </head>
 <body>
   <div class="container">
-    <div class="row section">
+    <div class="row mt-5 section">
       <h1 class="text-center">学習記録サービス&emsp;がくReco</h1>
     </div>
     <div class="row text-center section">
-      <div class="col">
+      <div class="col-12">
         <h2>学習結果</h2>
         <p>日々の学習の結果を記録しよう</p>
       </div>
     </div>
-  
-      <h2>学習投稿</h2>
-      <p>どんな学習内容で、どれくらいかかったか？<br/>それと今日の学習の振り返りもあると良いね！</p>
+    <div class="row text-center section">
+      <div class="col-12">
+        <h2>学習投稿</h2>
+        <p>どんな学習内容で、どれくらいかかったか？<br/>それと今日の学習の振り返りもあると良いね！</p>
+      </div>
+    </div>
+    <div class="row text-center section">
+      <div class="col-12">
+        <a class="btn btn-primary" href="">SignUp</a>
+      </div>
+    </div>
+    <div class="row text-center section">
+      <div class="col-12">
+        <a class="btn btn-success px-3" href="">Login</a>
+      </div>
+    </div>
   </div>
 </body>
 </html>
