--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../public/index.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-  <title>がくReco</title>
-</head>
-<body>
+  {{template "layout"}}
   <div class="container">
     <div class="row mt-5 section">
       <h1 class="text-center">学習記録サービス&emsp;がくReco</h1>
@@ -30,7 +17,7 @@
     </div>
     <div class="row text-center section">
       <div class="col-12">
-        <a class="btn btn-primary" href="">SignUp</a>
+        <a class="btn btn-primary" href="/signup">SignUp</a>
       </div>
     </div>
     <div class="row text-center section">
@@ -39,5 +26,3 @@
       </div>
     </div>
   </div>
-</body>
-</html>
