--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,20 +1,21 @@
 {{template "layout"}}
 <div class="container">
+  <h1 class="mt-3">Signup</h1>
   <div class="row mt-5">
-    <form action="/usercreate" method="POST">
+    <form action="/usercreate?hook=signup" method="post" enctype="application/x-www-form-urlencoded">
       <div class="mb-3">
         <label for="name" class="form-label">User name</label>
-        <input type="text" class="form-control" id="name" aria-describedby="emailHelp">
+        <input type="text" class="form-control" id="name" name="name">
       </div>
       <div class="mb-3">
         <label for="email" class="form-label">Email address</label>
-        <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
+        <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp">
       </div>
       <div class="mb-3">
         <label for="password" class="form-label">Password</label>
-        <input type="password" class="form-control" id="password">
+        <input type="password" class="form-control" id="password" name="password">
       </div>
-      <button type="submit" class="btn btn-primary">Signup</button>
+      <input type="submit" class="btn btn-primary" value="Signup">
     </form>
   </div>
 </div>
