ログイン機能作成(session未作成)

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
     </div>
     <div class="row text-center section">
       <div class="col-12">
-        <a class="btn btn-success px-3" href="">Login</a>
+        <a class="btn btn-success px-3" href="/login">Login</a>
       </div>
     </div>
   </div>
